# npd

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.github/workflows/: build.yml
notes/: nix-eval-jobs-darwin-maxrss-issue.md
src/: build.rs  cache.rs  clean.rs  eval.rs  evalfile.rs  hydra.rs  live.rs  main.rs  model.rs  report.rs  schema.sql  store.rs
