[package]
name = "npd"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.18"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = "2"
zstd = "0.13"
